# di-deploy-ml-model-in-aws

./: .dockerignore  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  docker-compose.yml  dockerfile  pyproject.toml
src/api/: fastapi.py
src/ml/: create_model.py  trained_model.pkl
src/templates/: index.html
terraform/: .terraform.lock.hcl  main.tf  outputs.tf  variables.tf
terraform/modules/api/: iam.tf  main.tf  outputs.tf  security_group.tf  user_data.sh  variables.tf
terraform/modules/ml_api_bucket/: main.tf  outputs.tf  variables.tf
terraform/modules/vpc/: main.tf  outputs.tf  variables.tf
