[project]
name = "di-deploy-ml-model-in-aws"
version = "0.1.0"
description = "This project aims to develop and implement a cloud infrastructure solution using Terraform to host a data science application on AWS."
authors = [
    {name = "JadesonBruno",email = "jadesonbruno.a@outlook.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pre-commit = "^4.3.0"

[tool.isort]
profile = "black"
