[project]
name = "di-deploy-ml-model-in-aws"
version = "0.1.0"
description = "This project aims to develop and implement a cloud infrastructure solution using Terraform to host a data science application on AWS."
authors = [
    {name = "JadesonBruno",email = "jadesonbruno.a@outlook.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "scikit-learn (>=1.7.1,<2.0.0)",
    "fastapi (>=0.116.1,<0.117.0)",
    "python-multipart (>=0.0.20,<0.0.21)",
    "jinja2 (>=3.1.6,<4.0.0)",
    "uvicorn (>=0.35.0,<0.36.0)",
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pre-commit = "^4.3.0"

[tool.isort]
profile = "black"
